--- a/css/tea.css
+++ b/css/tea.css
@@ -1,4 +1,5 @@
 @import url(style.css);
+@import url(animation.css);
 
 .header_wrapper ul li:nth-child(2) h4 {
     color: #c4a87e;
@@ -40,4 +41,3 @@
     text-align: center;
   }
   
-/* -----------content_space--------------------- */
