--- a/css/reservation.css
+++ b/css/reservation.css
@@ -14,15 +14,13 @@
 
 /* ----------------------------content start------------------------------------------- */
 
-.content_wrapper2 {
-  display: flex;
+/* .content_wrapper2 {
   position: relative;
   background-color: rgb(255, 255, 255, 0.5);
 }
 
 .content_wrapper2::after {
   content: "";
-  /* display: block; */
   background-image: url(../img/logo\(after\).svg);
   width: 441px;
   height: 438px;
@@ -31,80 +29,125 @@
   z-index: -1;
   left: 302px;
   top: 274px;
-}
+} */
 
 /* ---------------content_left-------------------- */
 
-.content_left h4 {
-  font-weight: normal;
+.content_left p {
+  font-size: 16px;
+  border: 1px solid #c4a87e;
+  border-radius: 10px;
+  padding: 40px;
+  color: #573e1a;
+  font-family: Noto Sans TC;
+  margin-bottom: 30px;
+}
+
+.content_left h2 {
+  /* border: 1px solid #573e1a; */
+  margin: 200px auto 128px;
+  position: relative;
+}
+
+.content_left h2::after {
+  /* border: 1px solid #573e1a; */
+  content: "";
+  display: block;
+  width: 134px;
+  height: 133px;
+  background-image: url(../img/circle.svg);
+  position: absolute;
+  left: 484px;
+  top: -35px;
+  z-index: -1;
 }
 
 /* ---------------content_right-------------------- */
 
+
+
 .content_right {
-  /* border: 1px solid #573e1a; */
-  padding-left: 64px;
-  /* order: 1; */
+  border: 1px solid #c4a87e;
+  text-align: center;
+  border-radius: 10px;
+  margin-bottom: 20px;
+
+
 }
 
+.content_right ul{
+  /* border: 1px solid #573e1a; */
+  margin: 40px auto;
+  display: inline-block;
+  text-align-last: left;
+  color: #573e1a;
+  
+  
+}
+
+
+
 .content_right p {
-  margin: 7px 0;
-  flex-grow: 1;
+  margin: 8px 0;
+  font-size: 16px;
+  
+  
 }
 
 .content_right .name {
-  width: 255px;
-  height: 58px;
+  width: 260px;
+  height: 42px;
   border: 1px solid #c4a87e;
-  padding-left: 10px;
+  padding-left: 12px;
   outline: 0;
-  font-size: 24px;
+  font-size: 16px;
   border-radius: 5px;
-  background-color: rgb(255, 255, 255, 0.5);
+  margin-bottom: 10px;
 }
 
-.content_right .female,
-.male {
-  width: 24px;
-  height: 24px;
+.female,
+.male{
+  width: 16px;
+  height: 16px;
+  margin: 0 15px;
 }
 
-.content_right span {
-  padding-left: 20px;
-}
+
+
+
 
 .content_right .phone {
-  width: 543px;
-  height: 58px;
+  width: 520px;
+  height: 42px;
   border: 1px solid #c4a87e;
-  padding-left: 10px;
+  padding-left: 12px;
   outline: 0;
-  font-size: 24px;
+  font-size: 16px;
   border-radius: 5px;
+  margin-bottom: 10px;
 }
 
 .content_right .email {
-  width: 543px;
-  height: 58px;
+  width: 520px;
+  height: 42px;
   border: 1px solid #c4a87e;
-  padding-left: 10px;
+  padding-left: 12px;
   outline: 0;
-  font-size: 24px;
+  font-size: 16px;
   border-radius: 5px;
-  background-color: rgb(255, 255, 255, 0.5);
+  margin-bottom: 30px;
 }
 
 .content_right textarea {
-  width: 100%;
-  height: 272px;
+  width: 520px;
+  
   border: 1px solid #c4a87e;
-  padding: 10px;
+  padding: 12px;
   outline: 0;
   background-color: #f6f6f6;
-  margin-bottom: 20px;
-  font-size: 24px;
+  /* margin-bottom: 20px; */
+  font-size: 16px;
   border-radius: 5px;
-  background-color: rgb(255, 255, 255, 0.5);
 }
 
 .content_right ol {
@@ -112,71 +155,93 @@
 }
 
 .content_right ol .date {
-  width: 245px;
-  height: 58px;
+  width: 235px;
+  height: 42px;
   border: 1px solid #c4a87e;
   outline: 0;
-  font-size: 24px;
+  font-size: 16px;
   border-radius: 5px;
-  padding-left: 10px;
+  padding-left: 5px;
+  margin-bottom: 30px;
   padding-right: 10px;
-  background-color: rgb(255, 255, 255, 0.5);
+  /* padding-left: 10px;
+  padding-right: 10px; */
+
 }
 
 .content_right ol .time {
-  width: 245px;
-  height: 58px;
+  width: 235px;
+  height: 42px;
   border: 1px solid #c4a87e;
   outline: 0;
-  font-size: 24px;
+  font-size: 16px;
   border-radius: 5px;
-  margin-left: 20px;
+  margin-bottom: 30px;
   padding-left: 10px;
+  margin-left: 25px;
   padding-right: 10px;
-  background-color: rgb(255, 255, 255, 0.5);
+  /* margin: 0 10px; */
+  /* margin-left: 20px;
+  padding-left: 10px;
+  padding-right: 10px; */
+
 }
 
 .content_right ol li:last-child p {
-  margin-left: 20px;
+  margin-left: 25px;
 }
 
 .content_right .partysize {
-  width: 265px;
-  height: 58px;
+  width: 255px;
+  height: 42px;
   border: 1px solid #c4a87e;
   outline: 0;
-  font-size: 24px;
+  font-size: 16px;
   border-radius: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
+  margin-bottom: 30px;
 
-  background-color: rgb(255, 255, 255, 0.5);
+
+  padding: 0px 1.4em 0px 0.8em;
+
+  appearance: none;
+    background-color: transparent;
+    background-image: url(../img/arrow-down.svg);
+    background-repeat: no-repeat;
+    background-position: right 0.7em top 50%, 0px 0px;
 }
 
 .content_right .store {
-  width: 265px;
-  height: 58px;
+  width: 255px;
+  height: 42px;
   border: 1px solid #c4a87e;
   outline: 0;
-  font-size: 24px;
+  font-size: 16px;
   border-radius: 5px;
-  padding-left: 10px;
+  margin-left: 25px;
+  /* padding-left: 10px;
   padding-right: 10px;
-  margin-left: 20px;
-  background-color: rgb(255, 255, 255, 0.5);
+  margin-left: 20px; */
+  margin-bottom: 30px;
+  padding: 0px 1.4em 0px 0.8em;
+
+  appearance: none;
+    background-color: transparent;
+    background-image: url(../img/arrow-down.svg);
+    background-repeat: no-repeat;
+    background-position: right 0.7em top 50%, 0px 0px;
 }
 
-.content_right .send {
-  width: 197px;
-  height: 74px;
+.send {
+  /* width: 197px; */
+  width: 100%;
+  height: 54px;
   background-color: #573e1a;
   color: white;
   border: 0;
   display: block;
-  font-size: 24px;
+  font-size: 20px;
   border-radius: 5px;
   font-family: "Noto Serif TC", serif;
-  margin: 0 auto;
 }
 
 /* ----------------------------content end------------------------------------------- */
