--- a/css/about.css
+++ b/css/about.css
@@ -26,7 +26,7 @@
 
 .content_top ul {
   display: flex;
-  margin-bottom: 120px;
+  margin-bottom: 150px;
   margin-top: 35px;
   
 }
@@ -54,9 +54,10 @@
 }
 
 .content_top .top_block {
-  width: 368px;
-  height: 368px;
+  width: 300px;
+  height: 250px;
   background-color: #c4a87e;
+  opacity: 0.4;
   position: absolute;
   bottom: -35px;
   right: -50px;
@@ -96,14 +97,15 @@
 }
 
 .content_bottom .bottom_block {
-  width: 368px;
-  height: 368px;
+  width: 300px;
+  height: 250px;
   background-color: #c4a87e;
   position: absolute;
   bottom: -35px;
   left: -50px;
   z-index: -1;
   border-radius: 10px;
+  opacity: 0.4;
 }
 
 /* ----------------------content end------------------------- */
