--- a/css/about.css
+++ b/css/about.css
@@ -37,11 +37,10 @@
 }
 
 .content_top h2 {
-  text-align: left;
-  position: relative;
+margin: 0 auto;
 }
 
-.content_top h2::after {
+/* .content_top h2::after {
   content: "";
   display: block;
   width: 134px;
@@ -51,7 +50,7 @@
   left: 10px;
   top: -30px;
   z-index: -1;
-}
+} */
 
 .content_top .top_block {
   width: 300px;
@@ -80,11 +79,10 @@
 }
 
 .content_bottom h2 {
-  text-align: right;
-  position: relative;
-}
+  margin: 0 auto;
+  }
 
-.content_bottom h2::after {
+/* .content_bottom h2::after {
   content: "";
   display: block;
   width: 134px;
@@ -94,7 +92,7 @@
   left: 300px;
   top: -30px;
   z-index: -1;
-}
+} */
 
 .content_bottom .bottom_block {
   width: 300px;
