--- a/css/index.css
+++ b/css/index.css
@@ -4,27 +4,38 @@
 /* -------------------------banner start-----------------------------*/
 .banner {
   background-image: url(../img/banner2.jpg);
-  /* height: 545px; */
+  height: 545px;
   width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
 }
 
-.banner_text {
+.banner_text_wrapper {
   max-width: 1100px;
   height: 545px;
   margin: 0 auto;
-  /* border: 1px solid red; */
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  display: flex;
+  flex-direction: column;
+}
+
+.banner_text {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-left: 550px;
+  padding-top: 50px;
 }
 
 .banner_text h2 {
+  background-image: none;
+  width: auto;
+  height: auto;
   color: #c4a87e;
-  grid-row: 2 / 3;
-  grid-column: 2 / 3;
+  /* grid-row: 2 / 3;
+  grid-column: 2 / 3; */
   text-shadow: 3px 3px 3px rgb(0 0 0 / 50%);
   letter-spacing: 5px;
 }
@@ -41,10 +52,10 @@
   text-align: center;
   font-size: 1.75em;
   color: #c4a87e;
-  grid-row: 2 / 3;
-  grid-column: 2 / 3;
-  margin: 0 auto;
-  margin-top: 100px;
+
+  /* grid-row: 2 / 3;
+  grid-column: 2 / 3; */
+  /* margin-top: 100px; */
   /* margin-right: 70px; */
 }
 
@@ -69,20 +80,6 @@
 .content_tea h2 {
   /* border: 1px solid #573e1a; */
   margin: 121px auto 60px;
-  position: relative;
-}
-
-.content_tea h2::after {
-  /* border: 1px solid #573e1a; */
-  content: "";
-  display: block;
-  width: 134px;
-  height: 133px;
-  background-image: url(../img/circle.svg);
-  position: absolute;
-  left: 484px;
-  top: -35px;
-  z-index: -1;
 }
 
 .content_tea ul {
@@ -138,20 +135,6 @@
 .content_news h2 {
   /* border: 1px solid #573e1a; */
   margin: 200px auto 128px;
-  position: relative;
-}
-
-.content_news h2::after {
-  /* border: 1px solid #573e1a; */
-  content: "";
-  display: block;
-  width: 134px;
-  height: 133px;
-  background-image: url(../img/circle.svg);
-  position: absolute;
-  left: 484px;
-  top: -35px;
-  z-index: -1;
 }
 
 .content_news ul {
@@ -202,4 +185,3 @@
 }
 
 /* -------------------content end----------------------- */
-
