--- a/css/space.css
+++ b/css/space.css
@@ -51,7 +51,6 @@
 .tabs__radio:checked + .tabs__label h2 {
   font-weight: bold;
   color: #c4a87e;
-  border-bottom: 2px solid #c4a87e;
 }
 
 .tabs__radio:checked + .tabs__label + .tabs__content {
@@ -70,7 +69,7 @@
   margin-top: 35px;
 }
 
-.taipei::after {
+/* .taipei::after {
   content: "";
   background-image: url(../img/circle.svg);
   width: 134px;
@@ -101,11 +100,13 @@
   z-index: -1;
   right: -30px;
   top: 8px;
-}
+} */
 
 .tabs__content h2 {
   margin-top: 113px;
   margin-bottom: 62px;
+  background-image: none;
+  margin: 0 auto;
 }
 
 /* ---------------content_picture---------------------- */
