--- a/css/index.css
+++ b/css/index.css
@@ -186,3 +186,98 @@
 
 /* -------------------content end----------------------- */
 
+
+/* --------------------RWD start----------------------------- */
+
+@media screen and (max-width: 414px) {
+
+
+
+/* -------------------------banner start-----------------------------*/
+.banner {
+  background-position: right center;
+  background-size: cover;
+  height: 387px;
+
+}
+
+.banner_text_wrapper {
+  
+  max-width: 382px;
+  height: 387px;
+
+  
+}
+
+.banner_text {
+
+  width: auto;
+  padding: 0;
+  
+
+
+}
+.banner_text h2{ 
+  font-size: 1.25rem;
+  display: none;
+  
+}
+
+
+
+.banner a {
+
+  width: 150px;
+  height: 50px;
+  line-height: 50px;
+
+  margin-left: 200px;
+  margin-top: 100px;
+}
+
+
+
+/* ----------------------banner end--------------------*/
+
+/* -------------------content start----------------------- */
+
+/* -----------content_tea--------------------- */
+.content_wrapper {
+  
+  margin: 0 auto;
+  /* border: 1px solid #573e1a; */
+}
+
+
+
+.content_tea ul {
+  flex-direction: column;
+}
+
+
+
+
+
+
+/* -----------content_space---------------------  */
+#slider {
+  width: 414px;
+  height: 277px;
+  background-position: center center;
+  background-size: cover;
+}
+
+/* -----------content_news--------------------- */
+
+
+
+.content_news ul {
+  flex-direction: column;
+}
+
+
+
+
+
+}
+/* -------------------content end----------------------- */
