--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,10 @@ header {
   margin-left: 5px;
 }
 
+.header_wrapper .fa {
+  display: none;
+}
+
 /* --------------------nav------------------------- */
 
 .header_wrapper ul {
@@ -253,3 +257,115 @@ footer {
 }
 
 /* --------------------footer end----------------------------- */
+
+/* --------------------RWD start----------------------------- */
+
+@media screen and (max-width: 414px) {
+  body {
+    /* font-size: 10px; */
+  }
+
+  .header {
+    width: 382px;
+  }
+
+  .header_wrapper {
+    max-width: 382px;
+    height: 93px;
+    margin: 0 auto;
+    position: relative;
+    margin: 0;
+  }
+
+  .header_wrapper .fa{
+    font-size: 40px;
+    padding-top: 26px;
+    color: #573e1a;
+    display: block;
+    float: right;
+  }
+
+  .header_wrapper ul {
+    display: none;
+    float: none;
+    flex-direction: column;
+    background-color: #573e1a;
+    /* display: flex;
+    position: relative; */
+    width: 100%;
+    position: absolute;
+    right: 0;
+    top: 93px;
+    z-index: 2;
+  }
+
+  .fa:hover ~ ul{
+    display: block;
+  }
+
+  .header_wrapper a h4{
+    color: white;
+  }
+
+
+  .header_wrapper img {
+    margin: 0;
+    margin-top: 12px;
+  }
+
+  .section_left iframe {
+    display: none;
+  }
+
+  .section_right ul {
+    display: none;
+  }
+
+  .section_left ul h5 {
+    display: none;
+  }
+
+  .footer_wrapper {
+    max-width: 382px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    padding: 30px 0;
+  }
+
+  .section_bottom {
+    max-width: 382px;
+    /* margin: 0 auto; */
+    line-height: 24px;
+    font-size: 0.75rem;
+    
+  }
+
+
+  .section_left ul {
+    margin: auto;
+    text-align: center;
+    
+  }
+
+  .section_left li{
+    margin-left: 0;
+  }
+
+
+  .section_right img {
+    margin: auto;
+    padding: 0;
+
+  }
+
+  .section_left {
+    order: 2;
+  }
+
+  .section_right {
+    order: 1;
+    margin: 0 auto;
+  }
+}
