--- a/css/space.css
+++ b/css/space.css
@@ -22,45 +22,35 @@
 
 /* -----------content_space--------------------- */
 
-.tabs {
+#tabs-nav {
   display: flex;
   flex-wrap: wrap;
   /* max-width: 400px; */
   /* font-family: sans-serif; */
 }
 
-.tabs__label {
+#tabs-nav li {
   margin: 0 auto;
   /* padding: 10px 16px; */
   cursor: pointer;
 }
 
-.tabs__radio {
-  display: none;
+#tabs-nav li a {
+  text-decoration: none;
 }
 
-.tabs__content {
+#tabs-nav li a:hover h2 {
+  font-weight: bold;
+  color: #c4a87e;
+}
+
+.tab-content {
   order: 1;
   width: 100%;
   /* border-bottom: 3px solid #dddddd; */
   line-height: 1.5;
   font-size: 0.9em;
-  display: none;
-}
-
-.tabs__radio:checked + .tabs__label h2 {
-  font-weight: bold;
-  color: #c4a87e;
-}
-
-.tabs__radio:checked + .tabs__label + .tabs__content {
-  display: initial;
-}
-
-/* ------------------------------------------------ */
-
-.tabs__label {
-  position: relative;
+  /* display: none; */
 }
 
 .taipei,
@@ -69,40 +59,7 @@
   margin-top: 35px;
 }
 
-/* .taipei::after {
-  content: "";
-  background-image: url(../img/circle.svg);
-  width: 134px;
-  height: 133px;
-  position: absolute;
-  z-index: -1;
-  left: -30px;
-  top: 8px;
-}
-
-.taichung::after {
-  content: "";
-  background-image: url(../img/circle.svg);
-  width: 134px;
-  height: 133px;
-  position: absolute;
-  z-index: -1;
-  left: -30px;
-  top: 8px;
-}
-
-.kaohsiung::after {
-  content: "";
-  background-image: url(../img/circle.svg);
-  width: 134px;
-  height: 133px;
-  position: absolute;
-  z-index: -1;
-  right: -30px;
-  top: 8px;
-} */
-
-.tabs__content h2 {
+.tab-content h2 {
   margin-top: 113px;
   margin-bottom: 62px;
   background-image: none;
