--- a/css/style.css
+++ b/css/style.css
@@ -71,9 +71,9 @@ header {
   margin-left: 5px;
 }
 
-.header_wrapper .fa {
+/* .header_wrapper .fa {
   display: none;
-}
+} */
 
 /* --------------------nav------------------------- */
 
@@ -96,24 +96,29 @@ header {
 
 /* -------------------nav-list-------------------------- */
 
-.header_wrapper ol {
+.header_wrapper .children {
   position: absolute;
-  display: none;
   background-color: #573e1a;
   opacity: 0.9;
   box-shadow: 0 5px 8px #000;
+  display: none;
 }
 
 .header_wrapper ol li h4 {
   color: white;
 }
 
-.header_wrapper ol li h4:hover {
+/* .header_wrapper .has-children:hover{
+  display: none;
+} */
+
+.header_wrapper ol li:hover {
   /* background-color: #c4a87e; */
-  color: #c4a87e;
+  /* color: #c4a87e; */
+  /* display: block; */
 }
 
-.header_wrapper li:hover ol {
+.header_wrapper li:hover .children {
   display: block;
 }
 
@@ -260,16 +265,18 @@ footer {
 
 /* --------------------RWD start----------------------------- */
 
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 428px) {
   body {
     /* font-size: 10px; */
   }
 
   .header {
-    width: 382px;
+    width: auto;
   }
 
   .header_wrapper {
+
+    
     max-width: 382px;
     height: 93px;
     margin: 0 auto;
@@ -277,41 +284,244 @@ footer {
     margin: 0;
   }
 
-  .header_wrapper .fa{
-    font-size: 40px;
-    padding-top: 26px;
-    color: #573e1a;
-    display: block;
-    float: right;
-  }
-
   .header_wrapper ul {
-    display: none;
     float: none;
     flex-direction: column;
-    background-color: #573e1a;
+    background-color: rgba(87, 62, 26, 0.5);
     /* display: flex;
     position: relative; */
     width: 100%;
     position: absolute;
     right: 0;
-    top: 93px;
+    /* top: 93px; */
     z-index: 2;
   }
 
-  .fa:hover ~ ul{
+  /* .fa:hover ~ ul{
     display: block;
-  }
+  } */
 
-  .header_wrapper a h4{
+  .header_wrapper a h4 {
     color: white;
   }
-
 
   .header_wrapper img {
     margin: 0;
     margin-top: 12px;
   }
+
+  /*---------------------HAMBURGER MENU----------------------*/
+
+  .hamburger-menu {
+    float: right;
+    padding-top: 35px;
+    margin-right: 15px;
+  }
+
+  .bar,
+  .bar:after,
+  .bar:before {
+    width: 30px;
+    height: 3px;
+  }
+
+  .bar {
+    position: relative;
+    transform: translateY(10px);
+    background: #573e1a;
+    transition: all 0ms 300ms;
+  }
+
+  .bar.animate {
+    background: rgba(255, 255, 255, 0);
+  }
+
+  .bar:before {
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: 10px;
+    background: #573e1a;
+    transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
+      transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
+  .bar:after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 10px;
+    background: #573e1a;
+    transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
+      transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
+  .bar.animate:after {
+    top: 0;
+    transform: rotate(45deg);
+    transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1),
+      transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
+  .bar.animate:before {
+    bottom: 0;
+    transform: rotate(-45deg);
+    transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1),
+      transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
+  /*---------------------Mobiles Menu ----------------------*/
+  /*---------------------Mobiles Menu - Design ---------------------*/
+
+  .mobile-menu ul {
+    /* margin: 0;
+    padding: 0; */
+  }
+
+  .mobile-menu li {
+    margin: 0;
+    overflow: hidden;
+    /* padding: 5px; */
+    position: relative;
+    text-align: left;
+    text-transform: uppercase;
+    /* padding-left:15px; */
+  }
+
+  .mobile-menu li:first-child {
+    /* margin-top: 70px; */
+  }
+
+  .mobile-menu li a {
+  }
+
+  /*---------------------
+    Mobiles Menu - Slide IN 
+    ----------------------*/
+
+  .mobile-menu {
+    /* float: none;
+    flex-direction: column; */
+    background-color: rgba(87, 62, 26, 0.8);
+    /* display: flex;
+    position: relative; */
+    width: 100%;
+
+    top: 93px;
+    z-index: 2;
+
+    max-width: 250px;
+    right: -100%;
+
+    height: 100%;
+    position: fixed;
+
+    overflow-y: auto;
+    -webkit-transform: translate3d(0, 0, 205px);
+    -moz-transform: translate3d(0, 0, 205px);
+    transform: translate3d(0, 0, 205px);
+    -webkit-transition: all 500ms ease-in-out;
+    -moz-transition: all 500ms ease-in-out;
+    transition: all 500ms ease-in-out;
+  }
+
+  .mobile-menu.active {
+    right: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    -webkit-transition: all 500ms ease-in-out;
+    -moz-transition: all 500ms ease-in-out;
+    transition: all 500ms ease-in-out;
+  }
+
+  /*---------------------
+    Mobiles Menu - Dropdown Submenu
+    ----------------------*/
+
+  .header_wrapper a {
+  }
+
+  .header_wrapper .children_mobile {
+    border-top: #c4a87e 1px solid;
+    border-bottom: #c4a87e 1px solid;
+    background-color: rgba(87, 62, 26, 0.5);
+    display: none;
+  }
+
+  .has-children:hover {
+    cursor: hand;
+  }
+
+  .mobile-menu .children_mobile li:first-child {
+    margin-top: 0px;
+  }
+
+  .icon-arrow {
+    position: absolute;
+    display: block;
+    font-size: 0.7em;
+    color: #c4a87e;
+    top: 5px;
+    right: 20px;
+    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+  }
+
+  .icon-arrow:after {
+    content: "\25BC";
+  }
+
+  .icon-arrow.open {
+    transform: rotate(-180deg);
+    -webkit-transform: rotate(-180deg);
+    -moz-transform: rotate(-180deg);
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+  }
+
+  .overlay.active {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: hsla(0, 0%, 0%, 0.5);
+    /* border: 1px solid red; */
+  }
+
+  .nav_wrapper {
+    /* border: 1px solid red; */
+  }
+
+  /* ---------------title--------------------------- */
+
+  .title {
+    background-position: 65% 35%;
+  }
+
+  .title_wrapper {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    max-width: 350px;
+    height: 300px;
+  }
+
+  .title_wrapper h1 {
+    font-size: 2.5rem;
+    grid: auto;
+  }
+
+  .content_crumb {
+    margin-left: 15px;
+  }
+
+  /*-------------footer-----------------------  */
 
   .section_left iframe {
     display: none;
@@ -339,25 +549,20 @@ footer {
     /* margin: 0 auto; */
     line-height: 24px;
     font-size: 0.75rem;
-    
   }
-
 
   .section_left ul {
     margin: auto;
     text-align: center;
-    
   }
 
-  .section_left li{
+  .section_left li {
     margin-left: 0;
   }
-
 
   .section_right img {
     margin: auto;
     padding: 0;
-
   }
 
   .section_left {
