--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 71px;
+  /* border: 1px solid #573e1a; */
 }
 
 .content_tea ul li {
@@ -96,6 +98,17 @@
   display: block;
   text-decoration: none;
   text-align: center;
+}
+
+.content_tea li button {
+  border: none;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.content_tea li button h4 {
+  font-family: "Noto Serif TC", serif;
+  font-size: 1.75em;
 }
 
 .content_tea_bottom {
@@ -121,6 +134,87 @@
   color: #c4a87e;
   border-bottom: 4px solid #c4a87e;
 }
+
+/* --------------------modal------------------------- */
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  /* padding-top: 100px; */
+  left: 0;
+  top: 0;
+
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modalContent {
+  background-color: #fff;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 100%;
+  max-width: 700px;
+  border-radius: 10px;
+
+  position: fixed;
+  left: 50%;
+  bottom: 50%;
+  transform: translate(-50%, 50%);
+  z-index: 100;
+}
+
+.modalContent .tea_info {
+  float: right;
+  margin: 20px;
+  width: 40%;
+  margin-right: 50px;
+}
+
+.modalContent .tea_text {
+  padding: 10px;
+  border: 1px solid #c4a87e;
+  border-radius: 10px;
+}
+
+.modalContent h4 {
+  color: #573e12;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.modalContent h5 {
+  color: #c4a87e;
+  text-align: left;
+  margin-top: 5px;
+  font-weight: normal;
+}
+
+.modalContent p {
+  color: #573e12;
+  text-align: left;
+  margin-top: 5px;
+  font-weight: normal;
+}
+
+.modalClose {
+  color: #573e12;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.modalClose:hover,
+.modalClose:focus {
+  color: #c4a87e;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 
 /* -----------content_space---------------------  */
 #slider {
@@ -249,13 +343,33 @@
   margin: 0 auto;
   /* border: 1px solid #573e1a; */
 }
-
+.content_tea h2{
+  margin: 0;
+  margin: 70px auto;
+}
 
 
 .content_tea ul {
   flex-direction: column;
+  margin: 0;
+  padding: 0;
 }
 
+.content_tea ul li {
+  margin: 0;
+  margin-bottom: 30px;
+  
+}
+
+
+.content_tea_bottom{
+  font-size: 1rem;
+  border-bottom: 2px solid #573e1a;
+  width: 90px;
+  margin: 0;
+  margin: 70px auto;
+  
+}
 
 
 
@@ -267,17 +381,38 @@
   height: 277px;
   background-position: center center;
   background-size: cover;
+  margin: 140px auto;
+  
 }
 
 /* -----------content_news--------------------- */
 
+.content_news h2 {
+margin: 0;
+margin: 70px auto;
+}
 
 
 .content_news ul {
   flex-direction: column;
+  margin: 0;
+  padding: 0;
+}
+
+.content_news ul li {
+  margin: 0;
+  margin-bottom: 40px;
 }
 
 
+.content_news_bottom{
+  font-size: 1rem;
+  border-bottom: 2px solid #573e1a;
+  width: 90px;
+  margin: 0;
+  margin: 70px auto;
+  
+}
 
 
 
