--- a/css/about.css
+++ b/css/about.css
@@ -28,7 +28,6 @@
   display: flex;
   margin-bottom: 150px;
   margin-top: 35px;
-  
 }
 
 .content_top li {
@@ -37,7 +36,7 @@
 }
 
 .content_top h2 {
-margin: 0 auto;
+  margin: 0 auto;
 }
 
 /* .content_top h2::after {
@@ -80,7 +79,7 @@ margin: 0 auto;
 
 .content_bottom h2 {
   margin: 0 auto;
-  }
+}
 
 /* .content_bottom h2::after {
   content: "";
@@ -111,57 +110,64 @@ margin: 0 auto;
 /* --------------------RWD start----------------------------- */
 
 @media screen and (max-width: 414px) {
+  .content_wrapper {
+    width: 100%;
+  }
 
   .content_wrapper p {
-width: 100%;
+    width: 100%;
+    margin: 0;
+    margin-bottom: 30px;
   }
-  
 
+  .content_wrapper h2 {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 30px;
+  }
 
   /* -------content top-------------- */
 
-.content_top ul {
-  flex-direction: column;
-  margin: 0;
+  .content_top ul {
+    flex-direction: column;
+    margin: 0;
+    margin-bottom: 60px;
+  }
+
+  .content_top li {
+    margin-bottom: 0;
+  }
+
+  .content_top img {
+    width: 80%;
+    margin-left: 40px;
+  }
+
+  .content_top li:nth-child(1) {
+    width: 80%;
+  }
+
+  .content_top .top_block {
+    display: none;
+  }
+
+  /* -------content bottom-------------- */
+  .content_bottom ul {
+    flex-direction: column;
+    margin: 0;
+  }
+
+  .content_bottom img {
+    width: 80%;
+    margin-left: 40px;
+  }
+
+  .content_bottom li:nth-child(1) {
+    width: 80%;
+    order: 0;
+  }
+
+  .content_bottom .bottom_block {
+    display: none;
+  }
 }
-
-.content_top img {
-  width: 80%;
-  margin: 0 auto;
-
-}
-
-.content_top .top_block{
-  display: none;
-}
-
-
-
-
-
-/* -------content bottom-------------- */
-.content_bottom ul {
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.content_bottom img {
-  width: 80%;
-  
-  
-
-}
-
-.content_bottom li:nth-child(1) {
-  width: 50%;
-  order: 0;
-}
-
-.content_bottom .bottom_block{
-  display: none;
-}
-
-
-}
-
