--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,56 @@ h5 {
   font-size: 1.25em;
   font-weight: bold;
 }
+/* ---------------back to top----------------------*/
+
+#button {
+  display: inline-block;
+  background-color: rgba(196, 168, 126, 0.5);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 1000;
+}
+#button::after {
+  content: "\f077";
+  font-family: FontAwesome;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 2em;
+  line-height: 50px;
+  color: #fff;
+}
+
+#button:hover {
+  cursor: pointer;
+  /* background-color: #333; */
+}
+/* #button:active {
+  background-color: #555;
+} */
+#button.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* Styles for the content section */
+
+.content {
+  width: 77%;
+  margin: 50px auto;
+  font-family: "Merriweather", serif;
+  font-size: 17px;
+  color: #6c767a;
+  line-height: 1.9;
+}
 
 /* ---------------header start----------------------*/
 header {
@@ -94,7 +144,7 @@ header {
   color: #c4a87e;
 }
 
-.has-children{
+.has-children {
   /* pointer-events: none; */
 }
 
@@ -279,8 +329,6 @@ footer {
   }
 
   .header_wrapper {
-
-    
     max-width: 382px;
     height: 93px;
     margin: 0 auto;
@@ -410,13 +458,10 @@ footer {
     /* display: flex;
     position: relative; */
     width: 100%;
-
     top: 93px;
     z-index: 2;
-
     max-width: 250px;
     right: -100%;
-
     height: 100%;
     position: fixed;
 
@@ -447,7 +492,6 @@ footer {
   }
 
   .header_wrapper .children_mobile {
-    
     border-top: #c4a87e 1px solid;
     border-bottom: #c4a87e 1px solid;
     background-color: rgba(87, 62, 26, 0.5);
@@ -582,14 +626,28 @@ footer {
     order: 1;
     margin: 0 auto;
   }
-
-
-
-
 }
 
-@media (min-width: 500px){
+@media (min-width: 500px) {
   .header_wrapper li:hover .children {
     display: block;
   }
+}
+
+@media (min-width: 500px) {
+  .content {
+    width: 43%;
+  }
+  #button {
+    margin: 30px;
+  }
+}
+.content h1 {
+  margin-bottom: -10px;
+  color: #03a9f4;
+  line-height: 1.5;
+}
+.content h3 {
+  font-style: italic;
+  color: #96a2a7;
 }
