--- a/css/reservation.css
+++ b/css/reservation.css
@@ -1,4 +1,7 @@
 @import url(style.css);
+* {
+  box-sizing: border-box;
+}
 
 .header_wrapper ul > li:nth-child(3) h4 {
   color: #c4a87e;
@@ -139,14 +142,14 @@ i {
 }
 
 .content_bottom ol .date {
-  width: 218px;
+  width: 247px;
   height: 42px;
   border: 1px solid #c4a87e;
   outline: 0;
   font-size: 16px;
   border-radius: 5px;
   padding-left: 5px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   padding-right: 10px;
 
   position: relative;
@@ -167,7 +170,7 @@ i {
 }
 
 .content_bottom ol .time {
-  width: 218px;
+  width: 247px;
   height: 42px;
   border: 1px solid #c4a87e;
   outline: 0;
@@ -191,13 +194,13 @@ i {
 }
 
 .content_bottom .partysize {
-  width: 255px;
+  width: 247px;
   height: 42px;
   border: 1px solid #c4a87e;
   outline: 0;
   font-size: 16px;
   border-radius: 5px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 
   padding: 0px 1.4em 0px 0.8em;
   appearance: none;
@@ -207,15 +210,24 @@ i {
   background-position: right 0.7em top 50%, 0px 0px;
 }
 
+.content_bottom .partysize_text {
+  font-size: 12px;
+  color: #d1a817;
+  margin: 0;
+  margin-bottom: 10px;
+  width: 90%;
+  font-weight: bold;
+}
+
 .content_bottom .store {
-  width: 255px;
+  width: 247px;
   height: 42px;
   border: 1px solid #c4a87e;
   outline: 0;
   font-size: 16px;
   border-radius: 5px;
   margin-left: 25px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 
   padding: 0px 1.4em 0px 0.8em;
   appearance: none;
@@ -249,6 +261,9 @@ i {
 /* --------------------RWD start----------------------------- */
 
 @media screen and (max-width: 414px) {
+  .content_wrapper {
+    width: 90%;
+  }
   /* -----------------content_top------------------ */
   .contnet_top {
     /* width: auto; */
@@ -272,7 +287,7 @@ i {
   /* -----------------content_bottom------------------ */
 
   .content_bottom {
-    width: 90%;
+    /* width: 90%; */
     margin: 0 auto;
   }
 
@@ -288,14 +303,19 @@ i {
     flex-direction: column;
   }
 
+  .content_bottom ol .partysize,
+  .content_bottom ol .store,
   .content_bottom ol .time,
-  .content_bottom ol .date {
-    width: 85%;
+  .content_bottom ol .date,
+  .content_bottom .phone,
+  .content_bottom .email,
+  .content_bottom textarea,
+  .send {
+    width: 100%;
   }
 
-  .content_bottom ol .partysize,
-  .content_bottom ol .store {
-    width: 100%;
+  .content_bottom ol .partysize {
+    /* margin-bottom: 10px; */
   }
 
   .content_bottom ol .time,
@@ -304,13 +324,13 @@ i {
   }
 
   .content_bottom ol li:last-child p {
-    margin: 0;
-    padding: 0;
+    margin-left: 0;
+    padding-left: 0;
   }
 
   .content_bottom .name {
-    width: 90%;
-    margin: 0;
+    width: 100%;
+    margin-left: 0;
     margin-bottom: 8px;
   }
 
@@ -320,15 +340,5 @@ i {
   }
   .female {
     margin-left: 0;
-  }
-
-  .content_bottom .phone,
-  .content_bottom .email,
-  .content_bottom textarea {
-    width: 90%;
-  }
-
-  .send {
-    width: 100%;
   }
 }
