--- a/css/style.css
+++ b/css/style.css
@@ -367,7 +367,9 @@ footer {
   .hamburger-menu {
     float: right;
     padding-top: 35px;
-    margin-right: 15px;
+    padding-bottom: 50px;
+    padding-left: 35px;
+    /* margin-right: 15px; */
   }
 
   .bar,
@@ -546,6 +548,7 @@ footer {
     height: 100vh;
     background-color: hsla(0, 0%, 0%, 0.5);
     /* border: 1px solid red; */
+    z-index: 1;
   }
 
   .nav_wrapper {
